# aniketd.github.io

./: CNAME  LICENSE  about.html  about.rst  aniketd.cabal  archive.html  contact.html  deploy.sh  index.html  keybase.txt  site.hs
css/: default.css
posts/: 2015-08-12-spqr.html  2015-08-23-example.html  2015-10-07-rosa-rosa-rosam.html  2015-11-28-carpe-diem.html  2015-12-07-tu-quoque.html
templates/: default.html
