name:                aniketd
version:             0.1.0.0
synopsis:            Hakyll project template from stack
description:         Please see README.md
homepage:            https://github.com/aniketd
license:             BSD3
license-file:        LICENSE
author:              Aniket Deshpande
maintainer:          anicake@gmail.com
copyright:           2016 Aniket Deshpande
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable aniketd
  main-is:             site.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base == 4.*,
                       hakyll == 4.7.*
